--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,9 @@ chrono = "0.4.19"
 hex = "0.4.3"
 hmac = "0.11.0"
 reqwest = {version="0.11.4",features=["json"]}
-serde = {version = "1.0.130",features = ["derive"]}
-serde_json = "1.0.67"
+# serde = {version = "1.0.130",features = ["derive"]}
+# serde_json = "1.0.67"
 sha2 = "0.9.8"
 sha256 = "1.0.2"
 tokio = { version = "1.11.0", features = ["full"] }
-url="2.3.1"
 dotenv="0.15.0"
