--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "union_sdk"
 version = "0.1.0"
 edition = "2021"
 authors = ["白菜林 <hi@nav.xin>"]
+description = "开发平台 Rust SDK, 集成简单快捷，也可以快速添加本SDK没有集成的接口。"
+keywords = ["taobao","tbsdk", "topsdk","淘宝sdk","union sdk"]
+license = " MIT OR AGPL-3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
