--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["白菜林 <hi@nav.xin>"]
 description = "开发平台 Rust SDK, 集成简单快捷，也可以快速添加本SDK没有集成的接口。"
-keywords = ["taobao","tbsdk", "topsdk","taobao sdk","union sdk"]
+keywords = ["union_sdk","union-sdk", "topsdk","taobao","taobao-sdk"]
 license = " MIT OR Apache-2.0"
 homepage = "https://3ae.cn/"
 repository = "https://github.com/clin003/union_sdk"
