--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "union_sdk"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 authors = ["白菜林 <hi@nav.xin>"]
 description = "开发平台 Rust SDK, 集成简单快捷，也可以快速添加本SDK没有集成的接口。"
@@ -8,6 +8,7 @@ keywords = ["union_sdk","union-sdk", "topsdk","taobao","taobao-sdk"]
 license = " MIT OR Apache-2.0"
 homepage = "https://3ae.cn/"
 repository = "https://github.com/clin003/union_sdk"
+documentation = "https://docs.rs/union_sdk"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
